--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	</div>
 	<div layout="row">
 		<div layout="column">
-			<div id="hierachy" style="width:200px;height:500px;border:1px solid grey"></div>
+			<div id="hierachy" style="width:200px;height:500px;border:1px solid grey">{{status}}</div>
 		</div>
 		<div layout="column">
 			<div id="container" style="width:800px;height:500px;border:1px solid grey"></div>
