--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
 		angular.module("app",["ngMaterial"]).controller("body",Body);
 	</script>
 	<div layout="row">
-		<md-input-container><input type="text" ng-model="user" placeholder="UserName" /></md-input-container>
-		<md-input-container><input type="password" ng-model="pass" placeholder="Password" /></md-input-container>
-		<md-input-container><input type="text" ng-model="domain" placeholder="Domain" /></md-input-container>
-		<md-button class="md-raised" ng-click="login()">LogIn</md-button>
+		<form ng-submit="login()">
+			<md-input-container><input type="text" name="username" ng-model="user" placeholder="UserName" /></md-input-container>
+			<md-input-container><input type="password" name="password" ng-model="pass" placeholder="Password" /></md-input-container>
+			<md-input-container><input type="text" name="domain" ng-model="domain" placeholder="Domain" /></md-input-container>
+			<md-button class="md-raised">LogIn</md-button>
+		</form>
 	</div>
 	<div layout="row">
 		<div layout="column">
