button type="submit"

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<md-input-container><input type="text" name="username" ng-model="user" placeholder="UserName" /></md-input-container>
 			<md-input-container><input type="password" name="password" ng-model="pass" placeholder="Password" /></md-input-container>
 			<md-input-container><input type="text" name="domain" ng-model="domain" placeholder="Domain" /></md-input-container>
-			<md-button class="md-raised">LogIn</md-button>
+			<md-button class="md-raised" type="submit">LogIn</md-button>
 		</form>
 	</div>
 	<div layout="row">
